--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
-  background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/41294/hero.jpg) no-repeat center center fixed; 
+  background: url("./public/images/bg.jpg;");
+  background: no-repeat center center fixed; 
   background-size:cover;
 }
 
