--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,14 @@
 	<title>KHK Library</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Orbitron">
-	<link rel="stylesheet" type="text/css" href="./css/library.css">
+	<link rel="stylesheet" type="text/css" href="./public/stylesheets/style.css">
 </head>
 
 <body>
 
 <!-- Search form below with imagery.-->
 
-	<img id="khk-logo" src="images/logo.svg" alt="KHK Logo">
+	<img id="khk-logo" src="./public/images/logo.svg" alt="KHK Logo">
 	<h1 class="library-name">LIBRARY</h1>
 	<form class="search" action="">
 		<input type="search" placeholder="Search here..." required>
