--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,7 +1,7 @@
 <% include head %>
 
-<body class = rbody>
-    <div class = lib-main>
+<body class="rbody">
+    <div class="lib-main">
         <% for(var i=0; i<books.length; i++){ %>
             <% include result %>
         <% } %>
