--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,12 +47,12 @@ Result page CSS styles
     width: 100%;
 }
 
-.info h1, p {
+.info > h1 p {
     margin-left: 25px;
-    font: sans-serif;
+    font-weight: bold;
 }
 
-.info ul li {
+.info > ul li {
     margin: 0 25px 0 0;
     display: inline;
     list-style-type: none;
@@ -68,68 +68,64 @@ Search page CSS style
 
 
 .sbody{
-    background: #949494;
-    font-family: 'Open Sans', sans-serif;
+    background: #FCFCFC;
+    font-family: 'Hind', sans-serif;
 }
 
 .logo {
-    border: solib black 1px;
-    padding-top: 25px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
 }
 
 .logo img {
-    max-height: 250px;
     width: 100%;
 }
 
-.name {
+#search {
+    display: table;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
+#search > span {
+    display: block;
+    overflow: hidden;
+}
+.searchtitle {
     text-align: center;
-}
-
-.search p {
-    font-size: 20px;
-    font-color: #e5c100;
-}
-
-.search {
-    padding-top: 20%;
     width: 100%;
 }
 
 .searchTerm {
-  float: left;
-  width: 100%;
-  border: 3px solid #e5c100;
-  padding: 5px;
-  height: 20px;
-  border-radius: 5px;
-  outline: none;
-  color: #9DBFAF;
+    display: table-cell;
+    width: 100%;
+    height: 1.8em;
+    border: 2px solid #8636B2;
+    padding: 5px;
+    border-radius: 5px;
+    outline: none;
+    color: #9DBFAF;
 }
 
 .searchTerm:focus{
-  color: black;
+    color: black;
 }
 
 .searchButton {
-  position: absolute;
-  display: inline-block;
-  right: -50px;
-  height: 36px;
-  border: 1px solid #e5c100;
-  background: #e5c100;
-  text-align: center;
-  color: black;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 20px;
-}
+    float: right;
+    display: table-cell;
+    width: 7em;
+    height: 1.8em;
+    font-size: 1.32em;
+    border: 2px solid #8636B2;
+    background: #e5c100;
+    text-align: center;
+    color: black;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    cursor: pointer;
 
-/*Resize the wrap to see the search bar change!*/
-.wrap{
-  width: 25%;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
