--- a/views/head.ejs
+++ b/views/head.ejs
@@ -4,4 +4,5 @@
 <head>
 	<title>KHK Library</title>
 	<link rel="stylesheet" href="/stylesheets/style.css" />
+	<link href='https://fonts.googleapis.com/css?family=Hind:500' rel='stylesheet' type='text/css'>
 </head>
