--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 		<img src="/images/khk_web2.png" />
 	</div>
 	<h1 class="searchtitle">KHK Delta Chapter Library Search Engine</h1>
-	<form id="search" action="/search-catalog" method="POST">
+	<form id="search" action="/search-catalog" method="GET">
 		<button type="submit" class="searchButton">
 			<i class="fa fa-search"></i>Search
 		</button>
