--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,10 +1,6 @@
 <% include head %>
 
 <body class="rbody">
-    <div class="logo">
-        <img src="/images/khk_web2.png" />
-    </div>
-    <h1 class="searchtitle">KHK Delta Chapter Library Search Engine</h1>
     <form id="search" action="/search-catalog" method="GET">
 		<button type="submit" class="searchButton">
 			<i class="fa fa-search"></i>Search
@@ -12,6 +8,7 @@
 		<span><input type="text" class="searchTerm" name="searchString" placeholder="What are you looking for?"></span>
 	</form>
     <div class="lib-main">
+<!--Loops through database and appends book results using the result.js file  -->
         <% for(var i=0; i<books.length; i++){ %>
             <% include result %>
         <% } %>
