--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,6 +1,7 @@
 <% include head %>
 
 <body class="rbody">
+		<% navbar %>
     <form id="search" action="/search-catalog" method="GET">
 		<button type="submit" class="searchButton">
 			<i class="fa fa-search"></i>Search
