--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -1,1 +1,2 @@
+  <h3 style="position:fixed;bottom:4px;right:16px;background:#8636B2;border:1px black solid;color:#e5c100;padding:2px;">Ethan A. Erdmann 2016</h3>
 </html>
